--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: 12
           registry-url: 'https://registry.npmjs.org'
+      - name: fetch tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: install
         run: yarn --check-files --frozen-lockfile --non-interactive
       - name: lint
