--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -284,7 +284,9 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: bump version
-        run: yarn lerna version --yes --no-git-tag-version --no-push
+        run: |
+          git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+          yarn lerna version --yes --no-git-tag-version --no-push
 
       - name: build
         run: PACKAGE_SUFFIX=edge yarn build
